--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Sẻ chia niềm vui ý nghĩa và tận hưởng ưu đãi 20/11 từ HSBC!</title>
+<title>Trải nghiệm Ngân hàng số HSBC Vietnam với các tính năng hữu ích!</title>
 <style type="text/css">
 * {
     box-sizing: border-box;
@@ -16,7 +16,7 @@
 </style>
 </head>
 <body>
-<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Cùng HBSC tri ân thầy cô với quà tặng ý nghĩa, trải nghiệm đáng nhớ và ưu đãi đến 20%, đặc biệt cho dịp 20/11 năm nay</div>
+<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Tối ưu hoá trải nghiệm, tận hưởng cuộc sống thêm dễ dàng với các tính năng số đa dạng, hữu ích.</div>
 <table width="700" border="0" cellpadding="0" cellspacing="0" class="chs_body" style="margin: 0 auto; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">
   <tr>
     <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><!--START HEADER VI -->
@@ -88,10 +88,7 @@
                       <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                     <tr>
-                      <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&lt;customer name&gt; thân mến,</td>
-                    </tr>
-                    <tr>
-                      <td align="left" valign="top" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">Cảm ơn bạn đã đăng ký sử dụng Ngân hàng số HSBC Việt Nam. Khám phá ngay hôm nay những tiện ích từ Ứng dụng HSBC Việt Nam để tối ưu hóa trải nghiệm của bạn.</td>
+                      <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">Cảm ơn bạn đã đăng ký sử dụng Ngân hàng số HSBC Việt Nam. Khám phá ngay hôm nay những tiện ích từ Ứng dụng HSBC Việt Nam để tối ưu hóa trải nghiệm của bạn.</td>
                     </tr>
                     <tr>
                       <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="60" height="auto" alt="" style="display:block"/></td>
@@ -111,7 +108,7 @@
                       <td align="center" style="margin: 0; padding: 0; border-radius: 10px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_box_1.jpg" width="620" height="auto" alt="" style="display:block"/></td>
                     </tr>
                     <tr>
-                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                     <tr>
                       <td align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 24px; line-height: 1.3; color: #000000;">Dịch vụ thanh toán hóa đơn</td>
@@ -136,7 +133,7 @@
                             <td align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1; color: #000000;"><strong>Hóa đơn học phí</strong></td>
                           </tr>
                           <tr>
-                            <td align="left" valign="top" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1; color: #000000;">Điện, Nước Internet, Truyền hình Điện, Nước Internet, Truyền hình</td>
+                            <td align="left" valign="top" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1; color: #000000;">Điện, Nước Internet, Truyền hình</td>
                             <td align="center" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1; color: #FFFFFF;">&nbsp;</td>
                             <td align="left" valign="top" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1; color: #000000;">Nạp tiền điện thoại, mua thẻ điện thoại, hóa đơn điện thoại trả sau</td>
                             <td align="center" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1; color: #FFFFFF;">&nbsp;</td>
@@ -145,7 +142,7 @@
                         </table></td>
                     </tr>
                     <tr>
-                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                     <tr>
                       <td align="center" bgcolor="#f6f6f6" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.1; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -203,10 +200,10 @@
                         </table></td>
                     </tr>
 					<tr>
-                      <td align="center" style="margin: 0; padding: 0; border-bottom: 1px solid #bfbfbf; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border-bottom: 1px solid #bfbfbf; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                     <tr>
-                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                     <tr>
                       <td align="left" style="margin: 0; padding: 0 85px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 24px; line-height: 1.3; color: #000000;"><strong>Cập nhật thông tin liên lạc trên ứng dụng HSBC Việt Nam</strong></td>
@@ -251,7 +248,7 @@
 						  </table></td>
                     </tr>
                     <tr>
-                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
 					</tr>
 					<tr>
                       <td align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -263,10 +260,10 @@
 						  </table></td>
                     </tr>
 					<tr>
-                      <td align="center" style="margin: 0; padding: 0; border-bottom: 1px solid #bfbfbf; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border-bottom: 1px solid #bfbfbf; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                     <tr>
-                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                     <tr>
                       <td align="left" style="margin: 0; padding: 0 95px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 24px; line-height: 1.3; color: #000000;"><strong>Quản lý thẻ và tài khoản với các tính năng trên Ứng dụng</strong></td>
@@ -314,7 +311,7 @@
 						  </table></td>
                     </tr>
 					<tr>
-                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
 					</tr>
 					<tr>
                       <td align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -326,10 +323,10 @@
 						  </table></td>
                     </tr>
 					<tr>
-                      <td align="center" style="margin: 0; padding: 0; border-bottom: 1px solid #bfbfbf; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border-bottom: 1px solid #bfbfbf; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                     <tr>
-                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                   </table></td>
                 <td width="40" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
@@ -391,10 +388,10 @@
                 <td width="40" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
                 <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 					<tr>
-                      <td align="center" style="margin: 0; padding: 0; border-bottom: 1px solid #bfbfbf; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border-bottom: 1px solid #bfbfbf; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                     <tr>
-                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
 					<tr>
                       <td align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -422,10 +419,10 @@
 						  </table></td>
                     </tr>
 					<tr>
-                      <td align="center" style="margin: 0; padding: 0; border-bottom: 1px solid #bfbfbf; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border-bottom: 1px solid #bfbfbf; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                     <tr>
-                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
 					<tr>
                       <td align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -447,7 +444,7 @@
 						  </table></td>
                     </tr>
                     <tr>
-                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>
+                      <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                     <tr>
                       <td align="left" bgcolor="#f3f3f3" style="margin: 0; padding: 10px 60px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">Nếu Quý khách mất thẻ, hãy liên hệ với chúng tôi để báo khóa thẻ hoàn toàn và yêu cầu thay thế thẻ mới.</td>
