--- a/source/index_en.html
+++ b/source/index_en.html
@@ -334,7 +334,7 @@
 							<td width="40" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>  
 							<td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
-									<td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 24px; line-height: 1.3; color: #000000;"><strong>Take control of your accounts and secure your cards with features available on the HSBC Vietnam app</strong></td>
+									<td style="margin: 0; padding: 0 0 15px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 24px; line-height: 1.3; color: #000000;"><strong>Take control of your accounts and secure your cards with features available on the HSBC Vietnam app</strong></td>
 								</tr>
 								<tr>
 								  <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
