--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -339,7 +339,7 @@
 							<td width="40" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="40" height="auto" alt="" style="display:block"/></td>  
 							<td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
-									<td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 24px; line-height: 1.3; color: #000000;"><strong>Chủ động quản lý tài khoản và bảo mật thẻ của Quý khách qua các tính năng trên Ứng dụng HSBC Việt Nam</strong></td>
+									<td style="margin: 0; padding: 0 0 15px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 24px; line-height: 1.3; color: #000000;"><strong>Chủ động quản lý tài khoản và bảo mật thẻ của Quý khách qua các tính năng trên Ứng dụng HSBC Việt Nam</strong></td>
 								</tr>
 								<tr>
 								  <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
